--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 ---
 layout: default
-title: "Home"
+title: "Publications/Preprints"
 ---
 
-I am a math PhD student at Simon Fraser University working under the supervision of [Katrina Honigs](https://www.sfu.ca/~khonigs/). I am broadly interested in Algebraic Geometry. Before starting my PhD, I completed my MSc at SFU. My MSc thesis was on Jacobians of Curves in Abelian Surfaces. Prior to that I completed MMath at Indian Statistical Institute Bangalore and BSc at Tezpur University. 
+{% if site.show_excerpts %}
+  {% include home.html %}
+{% else %}
+  {% include archive.html title="Posts" %}
+{% endif %}
